# RoboNotts-Healthcare

./: README.md
Software/: README.md
Software/happy_os/: .gitignore  CLAUDE_LOG.md  CMakeLists.txt  happy_ros2_control.xml  package.xml
Software/happy_os/bringup/config/: happy_controllers.yaml
Software/happy_os/bringup/launch/: happy.launch.py
Software/happy_os/description/launch/: view_robot.launch.py
Software/happy_os/description/meshes/: base_link.STL  wheel.STL
Software/happy_os/description/ros2_control/: happy.ros2_control.xacro
Software/happy_os/description/rviz/: happy.rviz
Software/happy_os/description/urdf/: amy_marks.urdf.xacro  sick_tim_ms.urdf.xacro
Software/happy_os/hardware/happy_ros2_control/: happy_system.cpp
Software/happy_os/hardware/happy_ros2_control/include/happy_ros2_control/: happy_system.hpp
Software/happy_os/hardware/happy_ros2_control/include/motor_interface/: motor_interface.h
Software/happy_os/hardware/motor_interface/: Cargo.toml  README.md
Software/happy_os/hardware/motor_interface/src/: crc.rs  lib.rs  message.rs  motor_controller.rs  tests.rs
Software/happy_os/hardware/motor_interface/src/crc/: constants.rs
Software/happy_os/hardware/motor_interface/src/message/: modbus_command.rs  modbus_register.rs  modbus_request.rs  modbus_response.rs
Software/happy_os/hardware/motor_interface/src/motor_controller/: constants.rs  error.rs  motor_status.rs
Software/happy_os/hardware/motor_interface/src/tests/: magic_strings.rs
